# Thesis_JulyCheckpoint

./: .gitignore  README.md  README_MAIN_SCRIPT.md  main.py  pyproject.toml  season_features_2022.csv  season_features_2024.csv  two_stage_clustering.ipynb
Clustering/: __init__.py  analysis.py  distance_metrics.py  feature_engineering.py  kmeans_clustering.py  optimization.py  workflow.py
Pipeline/: EXTRACTION_TECHNICAL_GUIDE.md  __init__.py  corner_analysis.py  data_aggregation.py  data_io.py  multi_driver_analysis.py  session_analysis.py  telemetry_extraction.py  track_analysis.py
corner_data/: corner_data2022.csv  corner_data2022.xlsx  corner_data2023.csv  corner_data2023.xlsx  corner_data2024.csv  corner_data2024.xlsx
